@@ -4,6 +4,11 @@ ChangeLog
 Version 0.6.0 - ??-???-????:
   - Changed file path reported in an error message to be canonicalised.
   - Changed maximum error message length to 255 characters (from 127).
+  - Fixed bugs in DIR$() function that would cause a crash if called with no
+    arguments:
+        - If it had never been initialised with a pattern to match.
+        - If the empty string indicating the end of the directory stream had
+          already been returned.
 
 Version 0.5.0 - 3-Feb-2023:
   - Changed to semantic versioning scheme.
